# BriscolaBot

./: .gitignore  AI scores.txt  CITATION.cff  LICENSE  README.md  agent.onnx  agent.pt  ai_scores.csv  briscola.ipynb  briscola_penalization.pt  generate_games.py  generate_games_batched.py  main.py  only_win_reward.onnx  only_win_reward.pt  pyproject.toml  requirements.txt  train-vs-random.pt  win_rate_analysis.ipynb
pretrained_models/: agent-v2.pt  briscola-bot-v3.pt
src/: VectorizedBriscola.py
src/agents/: Agent.py  GreedyAgent.py  NNAgent.py  RandomAgent.py  SearchingAgent.py
src/briscola_env/: SinglePlayerBriscola.py
src/briscola_env/single_player_briscola/: VectorizedBriscola.py
src/briscola_env/two_player_briscola/: Briscola.py  BriscolaState.py  Card.py  TwoPlayerBriscola.py  utils.py
src/env/briscola/: BriscolaConstants.py  BriscolaState.py  TwoPlayerBriscola.py  utils.py
src/envs/: __init__.py
src/envs/single_player_briscola/: SinglePlayerBriscola.py
src/envs/two_player_briscola/: BriscolaConstants.py  BriscolaState.py  TwoPlayerBriscola.py  game_tracker.py  utils.py
src/ui/: Constants.py  UIConstants.py  application.py  main.py
src/ui/controller/: BriscolaController.py
src/ui/resources/: agent.onnx  agent.pt
src/utils/: AgentPool.py  onnx_utils.py  training_utils.py
src/vectorizers/: VectorizedEnv.py
test/onnx/: onnx_test.py
test/pool/: test_pool.py
test/two_player_briscola/: briscola_test.py
test/utils/: test_concat.py  test_train_utils.py
test/vectorizers/: vectorized_env_test.py
thesis/: bibliography.bib  prova.tex  thesis.tex
thesis/chapters/: abstract.tex  background.tex  discussion.tex  facciata.tex  introduction.tex  learning-to-play-briscola.tex  original-work.tex  policy-gradient-methods.tex  results.tex  ringraziamenti.tex
thesis/chapters/background/: background.tex
thesis/chapters/original-work/: original-work.tex  player-scores.tex
thesis/human-evaluation/: ai_scores.csv  win_rate_analysis.ipynb
