[project]
name = "BriscolaBot"
description = "Mastering Briscola with model-free Deep Reinforcement Learning."
readme = "README.md"
requires-python = ">= 3.9"
authors = [{ name = "Lorenzo Cavuoti", email = "lorenzocav97@gmail.com" }]
license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "game", "RL", "AI", "gymnasium"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "numpy>=1.21.0",
    "gymnasium>=0.26.0",
    "python>=3.8.0,<3.9",
    "pygame^2.1.2",
    "onnxruntime^1.13.1",
    "PettingZoo^1.22.3",
    "requests^2.28.2"
]
