[project]
name = "BriscolaBot"
description = "Mastering Briscola with model-free Deep Reinforcement Learning."
readme = "README.md"
requires-python = ">= 3.9"
authors = [{ name = "Lorenzo Cavuoti", email = "lorenzocav97@gmail.com" }]
license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "game", "RL", "AI", "gymnasium"]
dependencies = [
    "numpy",
    "gymnasium",
    "pygame",
    "onnxruntime",
    "pettingzoo",
    "torch",
    "requests"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dynamic = ["version"]

